--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     mollitia inventore provident labore voluptatum nemo.
                 </p>
                 <div class="mb-5 pb-5">
-                    <button class="btn btn-lg btn-outline-info text-light me-4">Trabajos</button>
+                    <button class="btn btn-lg info text-light me-4">Trabajos</button>
                     <button class="btn btn-lg btn-info text-light">Contacto</button>
                 </div>
             </div>
@@ -169,7 +169,7 @@
             </div>
               <div class="col-12 col-sm-3 py-2">
                 <div class="card">
-                    <div class="image-top" style="background-image: url(assets/img/card-2.jpg)"></div>
+                    <div class="image-top" style="background-image: url(assets/img/card-4.jpg)"></div>
                     <div class="card-body">
                         <h5 class="card-title fw-bold">Recetas de Bar</h5>
                         <p class="card-text">
