--- a/index.html
+++ b/index.html
@@ -215,8 +215,8 @@
                 <textarea class="form-control" placeholder="Escribe aquí tu mensaje"></textarea>
             </div>
 
-            <div class="my-3 text-end">
-                <button class="btn btn-info text-light">Enviar</button>
+            <div class="my-4 text-center">
+                <button class="btn btn-info text-primary">Enviar</button>
             </div>
 
 
